ground_ture_logs/rust/Tree/fractions_1.rs.log
Command: verifast /app/ground_true/rust/Tree/fractions_1.rs
Exit code: 1
--- STDOUT ---
error[E0277]: `*mut Tree` cannot be sent between threads safely
  --> /app/ground_true/rust/Tree/fractions_1.rs:49:45
   |
49 | ... = thread::spawn(move || Tree::compute_sum_fibs(tree));
   |       ------------- -------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |       |             |
   |       |             `*mut Tree` cannot be sent between threads safely
   |       |             within this `{closure@...}`
   |       required by a bound introduced by this call
   |
   = help: within `{closure@...}`, the trait `std::marker::Send` is not implemented for `*mut Tree`
note: required because it's used within this closure
  --> /app/ground_true/rust/Tree/fractions_1.rs:49:45
   |
49 | ... = thread::spawn(move || Tree::compute_su...
   |                     ^^^^^^^
note: required by a bound in `std::thread::spawn`
  --> /rustc/c871d09d1cc32a649f4c5177bb819646260ed120/library/std/src/thread/mod.rs:725:0
   = note: the full name for the type has been written to 'fractions_1.long-type-13292812626361083579.txt'
   = note: consider using `--verbose` to print the full type name to the console

warning: function cannot return without recursing
  --> /app/ground_true/rust/Tree/fractions_1.rs:79:1
   |
79 | fn VeriFast_alloc<T>() -> *mut T { VeriFast_alloc() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   ---------------- recursive call site
   | |
   | cannot return without recursing
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.

--- STDERR ---

Result: FAIL
